# Whisper-Dayflow

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  quickstart.md
.codex/environments/: environment.toml
.github/workflows/: startup-performance.yml
.planning/codebase/: ARCHITECTURE.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
ai_changelog/: CHANGELOG_FORK.md  DOCUMENTATION_UPDATE_2024_11_14.md  README.md
ai_docs/: README.md  quickstart.md  whispo-analysis.md
ai_specs/auto-journal/: design.md  tasks.md
liv/: .gitignore  AGENTS.md  CLAUDE.md  README.md  electron-builder.config.cjs  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  quickstart.md  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
liv/ai_docs/: design-system-analysis.md
liv/docs/: ARCHITECTURE.md  BUILD-GUIDE.md  CLEANUP-2026-02-21.md  CONVENTIONS.md  NANOBOT-ARCHITECTURE.md  NANOBOT-INTEGRATION.md  README.md  VIDEO-PIPELINE-GUIDE.md  life-os-telos-framework.md  macos-permissions-troubleshooting.md  parakeet-performance-update.md  screen-capture-robustness.md
liv/liv-rs/: Cargo.toml
liv/scripts/: after-pack.cjs  build-nanobot.js  build-rs.cjs  build-rs.sh  (+5 more)
whispo/: .eslintignore  README.md  UI_IMPROVEMENTS.md  VoiceInk-Feature-Analysis.md  electron-builder.config.cjs  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  tailwind.config.js
whispo/whispo-rs/: Cargo.toml
whispo/whispo-rs/src/: main.rs
(+342 files in other folders)
