[package]
name = "whispo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.3.0"
core-foundation = "0.7"
core-graphics = "0.21"
IOKit-sys = "0.1.5"
objc = "0.2"
hound = "3.5.1"
num_cpus = "1.16.0"
whisper-rs = "0.11.0"

[profile.release]
strip = true
